# clientera-bot-v2

./: .dockerignore  .env.sample  APPLIED_CHANGES_SUMMARY.md  Dockerfile  Makefile  RAILWAY_DEPLOYMENT.md  RECOMMENDED_ENV_SETTINGS.env  STABILITY_REPORT.md  bot_control.py  example.env  fill_services_for_doctors.py  main.py  pyproject.toml  railway.env.example  railway.json  requirements.txt  simple_health_server.py  stop_bot.py  test-docker.sh  test_healthcheck.py  test_imports.py  test_minimal_server.py  test_search_slots_fix.py  test_search_slots_improved.py  test_slots_fallback.py  test_stream_fix.py  test_stream_management.py  user_profiles.json
 tests/: debug_services_api.py  test_adapter.py  test_admin_api.py  test_auth_header.py  test_doctors_api.py  test_doctors_cache.py  test_doctors_simple.py  test_pool.py  test_realtime.py  test_reconnection.py  test_services_cache.py  test_yclients_connection.py
docs/: ADMIN_GUIDE.md  DEPLOYMENT_SUMMARY.md  DOCTORS_API_UPDATE.md  NOTIFICATIONS_SETUP.md  README-REALTIME.md  README.md  README_SERVICES.md  SLOTS_FALLBACK.md  SYSTEM_INSTRUCTIONS.md  YCLIENTS_SETUP.md
src/: __init__.py  app.py
src/config/: env.py
src/integrations/: cache.py  notification_service.py  user_profiles.py  yclients_adapter.py  yclients_client.py  yclients_service.py
src/realtime/: __init__.py  client.py  connection_pool.py  events.py  tools.py
src/telegram/: __init__.py  handlers.py
src/utils/: logger.py  throttler.py
temp/: dental_bot.py  dental_bot_backup.py  fill_yclients_data.py  fix_services_staff.py
tests/: test_booking_fix.py  test_user_profiles_fix.py
